--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>The Blossom Studio</title>
   </head>
   <body>
+        <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
